--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,44 @@
 body {
     text-align: center;
 }
+
+/* Hide radio buttons on character choice modal */
+label > input {
+	position: absolute;
+	visibility: hidden;
+}
+
+label > input + img {
+	cursor: pointer;
+}
+
+
+/* Custom classes */
+.bitten {
+	background-color: #383838;
+	border-radius: 2px;
+	color: #F0F0F0;
+	font-family: Calibri;
+	font-size: 20px;
+	height: 20px;
+	height: auto;
+	left: 50%;
+	margin-left: -100px;
+	padding: 10px;
+	position: absolute;
+	text-align: center;
+	top: 100px;
+	width: 200px;
+	-webkit-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+	-moz-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+	box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+}
+
+.options {
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+.rules {
+	text-align: left;
+}
